[package]
name = "neighbor"
version = "0.1.1"
authors = ["janus <emekamicro@gmail.com>"]
homepage = "https://github.com/janus/neighbor"
repository = "https://github.com/janus/neighbor"

[lib]
name = "listenet"
path = "src/lib.rs"

[dependencies]
bytes = "0.4.0"
edcert = "*"
base64 = "0.6.0"
mio = "0.6.10"
time = "0.1.38"
chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }
